Syntax highlighting (all but line number alignment issue)

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,37 @@
 @import "tailwindcss";
 
+:root {
+  --sh-class: light-dark(var(--color-purple-700), var(--color-purple-400));
+  --sh-identifier: ""; /* objects */
+  --sh-sign: ""; /* brackets, parentheses, curly braces, commas, math symbols */
+  --sh-property: light-dark(var(--color-pink-700), var(--color-pink-500));
+  --sh-entity: light-dark(var(--color-green-700), var(--color-green-500));
+  --sh-jsxliterals: ""; /* text in JSX */
+  --sh-string: light-dark(var(--color-green-700), var(--color-green-500));
+  --sh-keyword: light-dark(var(--color-pink-700), var(--color-pink-500));
+  --sh-comment: var(--color-gray-400);
+}
+
+pre {
+  @apply mb-6 overflow-x-scroll rounded-md border border-neutral-200 bg-white py-5 text-[13px] shadow-xs **:font-[Geist_Mono] dark:border-neutral-800 dark:bg-neutral-950;
+}
+
 pre code {
   counter-reset: sh-line-number;
 }
 
+.sh__line {
+  @apply w-[100vw] px-5;
+}
+
 .sh__line::before {
-  counter-increment: sh-line-number 1;
   content: counter(sh-line-number);
+  counter-increment: sh-line-number 1;
   margin-right: 24px;
   text-align: right;
   color: #a4a4a4;
+}
+
+.sh__line--highlighted {
+  @apply relative block bg-blue-100 after:absolute after:top-0 after:bottom-0 after:left-0 after:w-[2px] after:bg-blue-500 after:content-[""] dark:bg-blue-950 dark:after:bg-blue-400;
 }
